--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "g": "^2.0.1",
+    "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
